# steel-monty

./: .env.example  .gitignore  README.md  architecture.md  pydantic-monty.md  pyproject.toml  specification.md  steel-cli-and-browser-agent-bench-learnings.md
research/: pydantic-monty-summary.md
research/pydantic-monty/: pydantic-monty-article.html  pydantic-monty-article.txt
research/pydantic-monty/pydantic_monty/: __init__.py  _monty.pyi  os_access.py
research/pydantic-monty/pydantic_monty-0.0.7.dist-info/: METADATA  RECORD
research/pydantic-monty/pydantic_monty-0.0.7.dist-info/sboms/: pydantic-monty.cyclonedx.json
schemas/: run_result.schema.json
scripts/: smoke.py
src/steel_monty_agent/: __init__.py  browser_bridge.py  cli.py  config.py  llm_anthropic.py  monty_runner.py  observability.py  orchestrator.py  policy.py  prompts.py  schemas.py  steel_sdk.py
